Finish moving config classes to separate module